--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
-    background: linear-gradient(to right, #4e73df, #1cc88a);
+    background: linear-gradient(to right, #d18c8c, #c81c8f);
 }
 
 header {
